[package]
authors = ["Brandon Matthews <bmatthews@zipcar.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support crate for the ST L011K4-NUCLEO"
keywords = ["embedded-hal", "stm32l011k4", "nucleo", "stm32l0x1", "stm32"]
license = "0BSD"
name = "nucleo-l011k4-bsp"
repository = "https://github.com/thenewwazoo/nucleo-l011k4-bsp/"
version = "0.2.0"
edition = "2018"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
nb = "1.0"
panic-halt = "0.2.0"
flash-embedded-hal = "0"
embedded-hal = "1.0.0-alpha.1"

[dependencies.stm32l0]
version = "0.11.0"
features = ["stm32l0x1", "rt"]

[dependencies.stm32l0x1-hal]
features = ["STM32L011x4", "rt"]
version = "0.9"

[profile]

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false
opt-level = "s"

[patch.crates-io.stm32l0x1-hal]
path = "/Users/bmatt/Development/whyz/stm32l0x1-hal/"
